removed dob from required input and removed validation
