# lambda_functions/v1/functions/lpa_codes/app/api/endpoints.py
@@ -207,7 +207,6 @@ def handle_check_actor_has_code(data):
         {
             "lpa": "568c6b37-46ed-44e6-a579-2d82f0504ef4",
             "actor":"9085ada2-d76f-41f8-a2d9-bea404ce90ac",
-            "dob": "1960-06-05"
         }
 
     Returns:
@@ -240,7 +239,6 @@ def handle_check_actor_has_code(data):
 
     lpa = data["lpa"]
     actor = data["actor"]
-    dob = data["dob"]
 
     key = {"lpa": lpa, "actor": actor}
 
@@ -252,21 +250,7 @@ def handle_check_actor_has_code(data):
 
     test_code_details = data
 
-#     print("Found :  ", code_details, flush=True)
-
     if code_details:
-#         for code in code_details:
-#             valid_code_details = {
-#                 "lpa": code["lpa"],
-#                 "actor": code["actor"],
-#                 "dob": code["dob"],
-#             }
-#
-#             if dict(sorted(test_code_details.items())) != dict(
-#                 sorted(valid_code_details.items())
-#             ):
-#                 logger.info(f"Codes retrieved from database did not match data passed in")
-#                 return {"codes": None}, 200
 
         return {"codes": code_details}, 200
 
